--- a/helm/woocommerce/templates/ingress.yaml
+++ b/helm/woocommerce/templates/ingress.yaml
@@ -1,9 +1,11 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: store-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
@@ -15,3 +17,4 @@ spec:
                 name: wordpress
                 port:
                   number: 80
+{{- end }}
