--- a/helm/woocommerce/templates/secret.yaml
+++ b/helm/woocommerce/templates/secret.yaml
@@ -6,3 +6,4 @@ type: Opaque
 data:
   db-password: {{ .Values.mysql.auth.password | b64enc | quote }}
   root-password: {{ .Values.mysql.auth.rootPassword | b64enc | quote }}
+  admin-password: {{ .Values.wordpress.adminPassword | b64enc | quote }}
