add persistent storage for MySQL and improve setup script

--- a/helm/woocommerce/templates/configmap-init.yaml
+++ b/helm/woocommerce/templates/configmap-init.yaml
@@ -10,6 +10,18 @@ data:
     set -e
     set -x  # Enable debug output
 
+    # Lock file to prevent duplicate execution
+    LOCK_FILE="/tmp/woocommerce-setup.lock"
+
+    # Try to acquire lock (mkdir is atomic)
+    if ! mkdir "$LOCK_FILE" 2>/dev/null; then
+        echo "Setup script is already running (lock file exists). Exiting to prevent duplicates."
+        exit 0
+    fi
+
+    # Ensure lock is released on exit
+    trap 'rmdir "$LOCK_FILE" 2>/dev/null || true' EXIT
+
     # Run setup in background to prevent blocking container startup
     (
         echo "=== WooCommerce Auto-Setup Starting ==="
@@ -100,21 +112,38 @@ data:
             echo "Creating sample products..."
             
             # Product 1: T-Shirt
-            $WP wc product create --name="Premium Cotton T-Shirt" --type=simple --regular_price=29.99 --description="High-quality cotton t-shirt, perfect for everyday wear" --short_description="Comfortable cotton t-shirt" --manage_stock=true --stock_quantity=50 --user=admin || echo "WARNING: Product 1 creation failed"
+            $WP wc product create --name="Premium Cotton T-Shirt" --type=simple --regular_price=29.99 --description="High-quality cotton t-shirt, perfect for everyday wear" --short_description="Comfortable cotton t-shirt" --manage_stock=true --stock_quantity=50 --catalog_visibility=visible --status=publish --user=admin || echo "WARNING: Product 1 creation failed"
             
             # Product 2: Jeans
-            $WP wc product create --name="Classic Blue Jeans" --type=simple --regular_price=59.99 --description="Classic fit blue jeans made from premium denim" --short_description="Durable denim jeans" --manage_stock=true --stock_quantity=30 --user=admin || echo "WARNING: Product 2 creation failed"
+            $WP wc product create --name="Classic Blue Jeans" --type=simple --regular_price=59.99 --description="Classic fit blue jeans made from premium denim" --short_description="Durable denim jeans" --manage_stock=true --stock_quantity=30 --catalog_visibility=visible --status=publish --user=admin || echo "WARNING: Product 2 creation failed"
             
             # Product 3: Sneakers
-            $WP wc product create --name="Running Sneakers" --type=simple --regular_price=89.99 --description="Lightweight running sneakers with superior cushioning" --short_description="Comfortable running shoes" --manage_stock=true --stock_quantity=25 --user=admin || echo "WARNING: Product 3 creation failed"
+            $WP wc product create --name="Running Sneakers" --type=simple --regular_price=89.99 --description="Lightweight running sneakers with superior cushioning" --short_description="Comfortable running shoes" --manage_stock=true --stock_quantity=25 --catalog_visibility=visible --status=publish --user=admin || echo "WARNING: Product 3 creation failed"
             
             # Product 4: Backpack
-            $WP wc product create --name="Travel Backpack" --type=simple --regular_price=49.99 --description="Spacious travel backpack with multiple compartments" --short_description="Versatile travel bag" --manage_stock=true --stock_quantity=40 --user=admin || echo "WARNING: Product 4 creation failed"
+            $WP wc product create --name="Travel Backpack" --type=simple --regular_price=49.99 --description="Spacious travel backpack with multiple compartments" --short_description="Versatile travel bag" --manage_stock=true --stock_quantity=40 --catalog_visibility=visible --status=publish --user=admin || echo "WARNING: Product 4 creation failed"
             
             # Product 5: Water Bottle
-            $WP wc product create --name="Insulated Water Bottle" --type=simple --regular_price=19.99 --description="Keeps drinks cold for 24 hours or hot for 12 hours" --short_description="Insulated stainless steel bottle" --manage_stock=true --stock_quantity=100 --user=admin || echo "WARNING: Product 5 creation failed"
+            $WP wc product create --name="Insulated Water Bottle" --type=simple --regular_price=19.99 --description="Keeps drinks cold for 24 hours or hot for 12 hours" --short_description="Insulated stainless steel bottle" --manage_stock=true --stock_quantity=100 --catalog_visibility=visible --status=publish --user=admin || echo "WARNING: Product 5 creation failed"
             
             echo "✓ Sample products created"
+            
+            # Verify product count
+            FINAL_PRODUCT_COUNT=$($WP post list --post_type=product --format=count)
+            echo "✓ Total products in database: ${FINAL_PRODUCT_COUNT}"
+            
+            # Clear WooCommerce caches and transients
+            echo "Clearing WooCommerce caches..."
+            $WP cache flush || true
+            $WP transient delete --all || true
+            echo "✓ Caches cleared"
+            
+            # Rebuild product lookup table to ensure products are queryable
+            echo "Rebuilding product lookup table..."
+            $WP wc tool run regenerate_product_lookup_tables --user=admin || {
+              echo "WARNING: Failed to rebuild product lookup table, continuing..."
+            }
+            echo "✓ Product lookup table rebuilt"
         fi
 
         # Set homepage to shop page
