--- a/helm/woocommerce/templates/mysql-deployment.yaml
+++ b/helm/woocommerce/templates/mysql-deployment.yaml
@@ -36,3 +36,10 @@ spec:
                 secretKeyRef:
                   name: store-secret
                   key: root-password
+          volumeMounts:
+            - name: mysql-data
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-data
+          persistentVolumeClaim:
+            claimName: mysql-pvc
