--- a/helm/woocommerce/values.yaml
+++ b/helm/woocommerce/values.yaml
@@ -14,7 +14,7 @@ wordpress:
     httpGet:
       path: /wp-admin/install.php
       port: 8080
-    initialDelaySeconds: 600  # 10 minutes - WordPress takes time to initialize
+    initialDelaySeconds: 600
     periodSeconds: 30
     timeoutSeconds: 10
     failureThreshold: 3
@@ -22,21 +22,20 @@ wordpress:
     httpGet:
       path: /
       port: 8080
-    initialDelaySeconds: 180  # 3 minutes for initial setup
+    initialDelaySeconds: 180
     periodSeconds: 10
     timeoutSeconds: 5
     failureThreshold: 6
   adminUser: "admin"
   adminEmail: "admin@example.com"
   blogName: "WooCommerce Store"
-  # adminPassword will be injected by backend
-
+  
 mysql:
   image: mysql:8.0
   auth:
     database: wordpress_db
     username: wordpress_user
-    # password will be injected via secret
+  
   resources:
     requests:
       memory: "256Mi"
